--- a/index.html
+++ b/index.html
@@ -356,12 +356,12 @@
 <div class="cell">
 <div class="cell-output-display">
 
-<div id="spnrgdvmzf" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="qxhjvwbplr" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-:where(#spnrgdvmzf) .gt_table {
+:where(#qxhjvwbplr) .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -386,7 +386,7 @@
   border-left-color: #D3D3D3;
 }
 
-:where(#spnrgdvmzf) .gt_heading {
+:where(#qxhjvwbplr) .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -398,7 +398,7 @@
   border-right-color: #D3D3D3;
 }
 
-:where(#spnrgdvmzf) .gt_title {
+:where(#qxhjvwbplr) .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -410,7 +410,7 @@
   border-bottom-width: 0;
 }
 
-:where(#spnrgdvmzf) .gt_subtitle {
+:where(#qxhjvwbplr) .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -422,13 +422,13 @@
   border-top-width: 0;
 }
 
-:where(#spnrgdvmzf) .gt_bottom_border {
+:where(#qxhjvwbplr) .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-:where(#spnrgdvmzf) .gt_col_headings {
+:where(#qxhjvwbplr) .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -443,7 +443,7 @@
   border-right-color: #D3D3D3;
 }
 
-:where(#spnrgdvmzf) .gt_col_heading {
+:where(#qxhjvwbplr) .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -463,7 +463,7 @@
   overflow-x: hidden;
 }
 
-:where(#spnrgdvmzf) .gt_column_spanner_outer {
+:where(#qxhjvwbplr) .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -475,15 +475,15 @@
   padding-right: 4px;
 }
 
-:where(#spnrgdvmzf) .gt_column_spanner_outer:first-child {
+:where(#qxhjvwbplr) .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-:where(#spnrgdvmzf) .gt_column_spanner_outer:last-child {
+:where(#qxhjvwbplr) .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-:where(#spnrgdvmzf) .gt_column_spanner {
+:where(#qxhjvwbplr) .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -495,7 +495,7 @@
   width: 100%;
 }
 
-:where(#spnrgdvmzf) .gt_group_heading {
+:where(#qxhjvwbplr) .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -520,7 +520,7 @@
   vertical-align: middle;
 }
 
-:where(#spnrgdvmzf) .gt_empty_group_heading {
+:where(#qxhjvwbplr) .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -535,15 +535,15 @@
   vertical-align: middle;
 }
 
-:where(#spnrgdvmzf) .gt_from_md > :first-child {
+:where(#qxhjvwbplr) .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-:where(#spnrgdvmzf) .gt_from_md > :last-child {
+:where(#qxhjvwbplr) .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-:where(#spnrgdvmzf) .gt_row {
+:where(#qxhjvwbplr) .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -562,7 +562,7 @@
   overflow-x: hidden;
 }
 
-:where(#spnrgdvmzf) .gt_stub {
+:where(#qxhjvwbplr) .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -575,7 +575,7 @@
   padding-right: 5px;
 }
 
-:where(#spnrgdvmzf) .gt_stub_row_group {
+:where(#qxhjvwbplr) .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -589,11 +589,11 @@
   vertical-align: top;
 }
 
-:where(#spnrgdvmzf) .gt_row_group_first td {
+:where(#qxhjvwbplr) .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-:where(#spnrgdvmzf) .gt_summary_row {
+:where(#qxhjvwbplr) .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -603,16 +603,16 @@
   padding-right: 5px;
 }
 
-:where(#spnrgdvmzf) .gt_first_summary_row {
+:where(#qxhjvwbplr) .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-:where(#spnrgdvmzf) .gt_first_summary_row.thick {
+:where(#qxhjvwbplr) .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-:where(#spnrgdvmzf) .gt_last_summary_row {
+:where(#qxhjvwbplr) .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -622,7 +622,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-:where(#spnrgdvmzf) .gt_grand_summary_row {
+:where(#qxhjvwbplr) .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -632,7 +632,7 @@
   padding-right: 5px;
 }
 
-:where(#spnrgdvmzf) .gt_first_grand_summary_row {
+:where(#qxhjvwbplr) .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -642,11 +642,11 @@
   border-top-color: #D3D3D3;
 }
 
-:where(#spnrgdvmzf) .gt_striped {
+:where(#qxhjvwbplr) .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-:where(#spnrgdvmzf) .gt_table_body {
+:where(#qxhjvwbplr) .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -655,7 +655,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-:where(#spnrgdvmzf) .gt_footnotes {
+:where(#qxhjvwbplr) .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -669,7 +669,7 @@
   border-right-color: #D3D3D3;
 }
 
-:where(#spnrgdvmzf) .gt_footnote {
+:where(#qxhjvwbplr) .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-left: 4px;
@@ -678,7 +678,7 @@
   padding-right: 5px;
 }
 
-:where(#spnrgdvmzf) .gt_sourcenotes {
+:where(#qxhjvwbplr) .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -692,7 +692,7 @@
   border-right-color: #D3D3D3;
 }
 
-:where(#spnrgdvmzf) .gt_sourcenote {
+:where(#qxhjvwbplr) .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -700,36 +700,36 @@
   padding-right: 5px;
 }
 
-:where(#spnrgdvmzf) .gt_left {
+:where(#qxhjvwbplr) .gt_left {
   text-align: left;
 }
 
-:where(#spnrgdvmzf) .gt_center {
+:where(#qxhjvwbplr) .gt_center {
   text-align: center;
 }
 
-:where(#spnrgdvmzf) .gt_right {
+:where(#qxhjvwbplr) .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-:where(#spnrgdvmzf) .gt_font_normal {
+:where(#qxhjvwbplr) .gt_font_normal {
   font-weight: normal;
 }
 
-:where(#spnrgdvmzf) .gt_font_bold {
+:where(#qxhjvwbplr) .gt_font_bold {
   font-weight: bold;
 }
 
-:where(#spnrgdvmzf) .gt_font_italic {
+:where(#qxhjvwbplr) .gt_font_italic {
   font-style: italic;
 }
 
-:where(#spnrgdvmzf) .gt_super {
+:where(#qxhjvwbplr) .gt_super {
   font-size: 65%;
 }
 
-:where(#spnrgdvmzf) .gt_two_val_uncert {
+:where(#qxhjvwbplr) .gt_two_val_uncert {
   display: inline-block;
   line-height: 1em;
   text-align: right;
@@ -738,31 +738,31 @@
   margin-left: 0.1em;
 }
 
-:where(#spnrgdvmzf) .gt_footnote_marks {
+:where(#qxhjvwbplr) .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 75%;
   vertical-align: 0.4em;
 }
 
-:where(#spnrgdvmzf) .gt_asterisk {
+:where(#qxhjvwbplr) .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-:where(#spnrgdvmzf) .gt_slash_mark {
+:where(#qxhjvwbplr) .gt_slash_mark {
   font-size: 0.7em;
   line-height: 0.7em;
   vertical-align: 0.15em;
 }
 
-:where(#spnrgdvmzf) .gt_fraction_numerator {
+:where(#qxhjvwbplr) .gt_fraction_numerator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: 0.45em;
 }
 
-:where(#spnrgdvmzf) .gt_fraction_denominator {
+:where(#qxhjvwbplr) .gt_fraction_denominator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: -0.05em;
@@ -786,7 +786,7 @@
     <tr><td class="gt_row gt_left">Coursework</td>
 <td class="gt_row gt_right">8</td></tr>
     <tr><td class="gt_row gt_left">Never learned</td>
-<td class="gt_row gt_right">5</td></tr>
+<td class="gt_row gt_right">6</td></tr>
     <tr><td class="gt_row gt_left">Workshops and Online courses</td>
 <td class="gt_row gt_right">2</td></tr>
     <tr><td class="gt_row gt_left">Graduate advisor</td>
@@ -956,16 +956,13 @@
 
 <section id="data-management-2" class="title-slide slide level1 center">
 <h1>Data Management</h1>
-<p>:::: {.columns}</p>
+<div class="columns">
 <div class="column" style="width:50%;">
 <ul>
 <li><p>There is an entire blog, <a href="https://retractionwatch.com/">Retraction Watch</a>, dedicated to monitoring scientific journal retractions</p></li>
 <li><p>While there are varying reasons an article is retracted, unreliable data is a top reason for article retractions</p></li>
 </ul>
-<div class="footer">
-<p>https://www.sciencedirect.com/science/article/pii/S0213911118300724?via%3Dihub</p>
-</div>
-<div class="column" style="width:50%;">
+</div><div class="column" style="width:50%;">
 <p><img data-src="img/retraction.PNG"></p>
 </div>
 </div>
