--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
   <p class="date">01-18-2023 (updated: 01/18/2023)</p>
 </section>
 
-<section id="about-the-group-n31" class="title-slide slide level1 center">
-<h1>About the group! (n=31)</h1>
+<section id="about-the-group-n32" class="title-slide slide level1 center">
+<h1>About the group! (n=32)</h1>
 <div class="cell">
 
 </div>
@@ -356,12 +356,12 @@
 <div class="cell">
 <div class="cell-output-display">
 
-<div id="qxhjvwbplr" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="ugkldtnwmw" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-:where(#qxhjvwbplr) .gt_table {
+:where(#ugkldtnwmw) .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -386,7 +386,7 @@
   border-left-color: #D3D3D3;
 }
 
-:where(#qxhjvwbplr) .gt_heading {
+:where(#ugkldtnwmw) .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -398,7 +398,7 @@
   border-right-color: #D3D3D3;
 }
 
-:where(#qxhjvwbplr) .gt_title {
+:where(#ugkldtnwmw) .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -410,7 +410,7 @@
   border-bottom-width: 0;
 }
 
-:where(#qxhjvwbplr) .gt_subtitle {
+:where(#ugkldtnwmw) .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -422,13 +422,13 @@
   border-top-width: 0;
 }
 
-:where(#qxhjvwbplr) .gt_bottom_border {
+:where(#ugkldtnwmw) .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-:where(#qxhjvwbplr) .gt_col_headings {
+:where(#ugkldtnwmw) .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -443,7 +443,7 @@
   border-right-color: #D3D3D3;
 }
 
-:where(#qxhjvwbplr) .gt_col_heading {
+:where(#ugkldtnwmw) .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -463,7 +463,7 @@
   overflow-x: hidden;
 }
 
-:where(#qxhjvwbplr) .gt_column_spanner_outer {
+:where(#ugkldtnwmw) .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -475,15 +475,15 @@
   padding-right: 4px;
 }
 
-:where(#qxhjvwbplr) .gt_column_spanner_outer:first-child {
+:where(#ugkldtnwmw) .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-:where(#qxhjvwbplr) .gt_column_spanner_outer:last-child {
+:where(#ugkldtnwmw) .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-:where(#qxhjvwbplr) .gt_column_spanner {
+:where(#ugkldtnwmw) .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -495,7 +495,7 @@
   width: 100%;
 }
 
-:where(#qxhjvwbplr) .gt_group_heading {
+:where(#ugkldtnwmw) .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -520,7 +520,7 @@
   vertical-align: middle;
 }
 
-:where(#qxhjvwbplr) .gt_empty_group_heading {
+:where(#ugkldtnwmw) .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -535,15 +535,15 @@
   vertical-align: middle;
 }
 
-:where(#qxhjvwbplr) .gt_from_md > :first-child {
+:where(#ugkldtnwmw) .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-:where(#qxhjvwbplr) .gt_from_md > :last-child {
+:where(#ugkldtnwmw) .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-:where(#qxhjvwbplr) .gt_row {
+:where(#ugkldtnwmw) .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -562,7 +562,7 @@
   overflow-x: hidden;
 }
 
-:where(#qxhjvwbplr) .gt_stub {
+:where(#ugkldtnwmw) .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -575,7 +575,7 @@
   padding-right: 5px;
 }
 
-:where(#qxhjvwbplr) .gt_stub_row_group {
+:where(#ugkldtnwmw) .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -589,11 +589,11 @@
   vertical-align: top;
 }
 
-:where(#qxhjvwbplr) .gt_row_group_first td {
+:where(#ugkldtnwmw) .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-:where(#qxhjvwbplr) .gt_summary_row {
+:where(#ugkldtnwmw) .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -603,16 +603,16 @@
   padding-right: 5px;
 }
 
-:where(#qxhjvwbplr) .gt_first_summary_row {
+:where(#ugkldtnwmw) .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-:where(#qxhjvwbplr) .gt_first_summary_row.thick {
+:where(#ugkldtnwmw) .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-:where(#qxhjvwbplr) .gt_last_summary_row {
+:where(#ugkldtnwmw) .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -622,7 +622,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-:where(#qxhjvwbplr) .gt_grand_summary_row {
+:where(#ugkldtnwmw) .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -632,7 +632,7 @@
   padding-right: 5px;
 }
 
-:where(#qxhjvwbplr) .gt_first_grand_summary_row {
+:where(#ugkldtnwmw) .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -642,11 +642,11 @@
   border-top-color: #D3D3D3;
 }
 
-:where(#qxhjvwbplr) .gt_striped {
+:where(#ugkldtnwmw) .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-:where(#qxhjvwbplr) .gt_table_body {
+:where(#ugkldtnwmw) .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -655,7 +655,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-:where(#qxhjvwbplr) .gt_footnotes {
+:where(#ugkldtnwmw) .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -669,7 +669,7 @@
   border-right-color: #D3D3D3;
 }
 
-:where(#qxhjvwbplr) .gt_footnote {
+:where(#ugkldtnwmw) .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-left: 4px;
@@ -678,7 +678,7 @@
   padding-right: 5px;
 }
 
-:where(#qxhjvwbplr) .gt_sourcenotes {
+:where(#ugkldtnwmw) .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -692,7 +692,7 @@
   border-right-color: #D3D3D3;
 }
 
-:where(#qxhjvwbplr) .gt_sourcenote {
+:where(#ugkldtnwmw) .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -700,36 +700,36 @@
   padding-right: 5px;
 }
 
-:where(#qxhjvwbplr) .gt_left {
+:where(#ugkldtnwmw) .gt_left {
   text-align: left;
 }
 
-:where(#qxhjvwbplr) .gt_center {
+:where(#ugkldtnwmw) .gt_center {
   text-align: center;
 }
 
-:where(#qxhjvwbplr) .gt_right {
+:where(#ugkldtnwmw) .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-:where(#qxhjvwbplr) .gt_font_normal {
+:where(#ugkldtnwmw) .gt_font_normal {
   font-weight: normal;
 }
 
-:where(#qxhjvwbplr) .gt_font_bold {
+:where(#ugkldtnwmw) .gt_font_bold {
   font-weight: bold;
 }
 
-:where(#qxhjvwbplr) .gt_font_italic {
+:where(#ugkldtnwmw) .gt_font_italic {
   font-style: italic;
 }
 
-:where(#qxhjvwbplr) .gt_super {
+:where(#ugkldtnwmw) .gt_super {
   font-size: 65%;
 }
 
-:where(#qxhjvwbplr) .gt_two_val_uncert {
+:where(#ugkldtnwmw) .gt_two_val_uncert {
   display: inline-block;
   line-height: 1em;
   text-align: right;
@@ -738,31 +738,31 @@
   margin-left: 0.1em;
 }
 
-:where(#qxhjvwbplr) .gt_footnote_marks {
+:where(#ugkldtnwmw) .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 75%;
   vertical-align: 0.4em;
 }
 
-:where(#qxhjvwbplr) .gt_asterisk {
+:where(#ugkldtnwmw) .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-:where(#qxhjvwbplr) .gt_slash_mark {
+:where(#ugkldtnwmw) .gt_slash_mark {
   font-size: 0.7em;
   line-height: 0.7em;
   vertical-align: 0.15em;
 }
 
-:where(#qxhjvwbplr) .gt_fraction_numerator {
+:where(#ugkldtnwmw) .gt_fraction_numerator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: 0.45em;
 }
 
-:where(#qxhjvwbplr) .gt_fraction_denominator {
+:where(#ugkldtnwmw) .gt_fraction_denominator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: -0.05em;
@@ -954,7 +954,7 @@
       }</style></aside>
 </section>
 
-<section id="data-management-2" class="title-slide slide level1 center">
+<section id="data-management-2" class="title-slide slide level1 smaller center">
 <h1>Data Management</h1>
 <div class="columns">
 <div class="column" style="width:50%;">
@@ -965,6 +965,9 @@
 </div><div class="column" style="width:50%;">
 <p><img data-src="img/retraction.PNG"></p>
 </div>
+</div>
+<div class="footnote">
+<p><a href="https://www.sciencedirect.com/science/article/pii/S0213911118300724?via%3Dihub">Science Direct</a></p>
 </div>
 <aside class="notes">
 <p>And continuing with research integrity….</p>
@@ -1119,7 +1122,7 @@
 </ol>
 <ul>
 <li>February 8th</li>
-<li>March 9th</li>
+<li>March 8th</li>
 <li>April 12th</li>
 <li>May 10th</li>
 </ul>
@@ -1135,21 +1138,6 @@
 
 <section id="introductions" class="title-slide slide level1 center" data-background-opacity=".2" data-background-image="img/greeting.jpg">
 <h1>Introductions</h1>
-<aside class="notes">
-<p>Maybe just say your background and why you joined this group?</p>
-<p>I’m Crystal. I was a research data manager at the University of Missouri for 8 years, managing data mostly for IES funded randomized controlled trial studies. For the last year I have been working for myself, doing freelance consulting around data management with education researchers at various institutions and I love it. It’s a dream job for me. I’m also working on a book called Data Management in Large-Scale Education Research Studies. And side note if anyone is interested in reading some chapters and providing feedback, please let me know!</p>
-<p>And I started this group because for most of my career I have felt like I am just winging it, learning best practices through trial and error. And this group has been a great way to learn from others, rather than solely through my own experiences.</p>
-<style type="text/css">
-        span.MJX_Assistive_MathML {
-          position:absolute!important;
-          clip: rect(1px, 1px, 1px, 1px);
-          padding: 1px 0 0 0!important;
-          border: 0!important;
-          height: 1px!important;
-          width: 1px!important;
-          overflow: hidden!important;
-          display:block!important;
-      }</style></aside>
 <div class="footer footer-default">
 
 </div>
