--- a/index.html
+++ b/index.html
@@ -356,12 +356,12 @@
 <div class="cell">
 <div class="cell-output-display">
 
-<div id="ltvyvqwkzb" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="dvnbacwwny" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-:where(#ltvyvqwkzb) .gt_table {
+:where(#dvnbacwwny) .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -386,7 +386,7 @@
   border-left-color: #D3D3D3;
 }
 
-:where(#ltvyvqwkzb) .gt_heading {
+:where(#dvnbacwwny) .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -398,7 +398,7 @@
   border-right-color: #D3D3D3;
 }
 
-:where(#ltvyvqwkzb) .gt_title {
+:where(#dvnbacwwny) .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -410,7 +410,7 @@
   border-bottom-width: 0;
 }
 
-:where(#ltvyvqwkzb) .gt_subtitle {
+:where(#dvnbacwwny) .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -422,13 +422,13 @@
   border-top-width: 0;
 }
 
-:where(#ltvyvqwkzb) .gt_bottom_border {
+:where(#dvnbacwwny) .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-:where(#ltvyvqwkzb) .gt_col_headings {
+:where(#dvnbacwwny) .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -443,7 +443,7 @@
   border-right-color: #D3D3D3;
 }
 
-:where(#ltvyvqwkzb) .gt_col_heading {
+:where(#dvnbacwwny) .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -463,7 +463,7 @@
   overflow-x: hidden;
 }
 
-:where(#ltvyvqwkzb) .gt_column_spanner_outer {
+:where(#dvnbacwwny) .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -475,15 +475,15 @@
   padding-right: 4px;
 }
 
-:where(#ltvyvqwkzb) .gt_column_spanner_outer:first-child {
+:where(#dvnbacwwny) .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-:where(#ltvyvqwkzb) .gt_column_spanner_outer:last-child {
+:where(#dvnbacwwny) .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-:where(#ltvyvqwkzb) .gt_column_spanner {
+:where(#dvnbacwwny) .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -495,7 +495,7 @@
   width: 100%;
 }
 
-:where(#ltvyvqwkzb) .gt_group_heading {
+:where(#dvnbacwwny) .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -520,7 +520,7 @@
   vertical-align: middle;
 }
 
-:where(#ltvyvqwkzb) .gt_empty_group_heading {
+:where(#dvnbacwwny) .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -535,15 +535,15 @@
   vertical-align: middle;
 }
 
-:where(#ltvyvqwkzb) .gt_from_md > :first-child {
+:where(#dvnbacwwny) .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-:where(#ltvyvqwkzb) .gt_from_md > :last-child {
+:where(#dvnbacwwny) .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-:where(#ltvyvqwkzb) .gt_row {
+:where(#dvnbacwwny) .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -562,7 +562,7 @@
   overflow-x: hidden;
 }
 
-:where(#ltvyvqwkzb) .gt_stub {
+:where(#dvnbacwwny) .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -575,7 +575,7 @@
   padding-right: 5px;
 }
 
-:where(#ltvyvqwkzb) .gt_stub_row_group {
+:where(#dvnbacwwny) .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -589,11 +589,11 @@
   vertical-align: top;
 }
 
-:where(#ltvyvqwkzb) .gt_row_group_first td {
+:where(#dvnbacwwny) .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-:where(#ltvyvqwkzb) .gt_summary_row {
+:where(#dvnbacwwny) .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -603,16 +603,16 @@
   padding-right: 5px;
 }
 
-:where(#ltvyvqwkzb) .gt_first_summary_row {
+:where(#dvnbacwwny) .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-:where(#ltvyvqwkzb) .gt_first_summary_row.thick {
+:where(#dvnbacwwny) .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-:where(#ltvyvqwkzb) .gt_last_summary_row {
+:where(#dvnbacwwny) .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -622,7 +622,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-:where(#ltvyvqwkzb) .gt_grand_summary_row {
+:where(#dvnbacwwny) .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -632,7 +632,7 @@
   padding-right: 5px;
 }
 
-:where(#ltvyvqwkzb) .gt_first_grand_summary_row {
+:where(#dvnbacwwny) .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -642,11 +642,11 @@
   border-top-color: #D3D3D3;
 }
 
-:where(#ltvyvqwkzb) .gt_striped {
+:where(#dvnbacwwny) .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-:where(#ltvyvqwkzb) .gt_table_body {
+:where(#dvnbacwwny) .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -655,7 +655,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-:where(#ltvyvqwkzb) .gt_footnotes {
+:where(#dvnbacwwny) .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -669,7 +669,7 @@
   border-right-color: #D3D3D3;
 }
 
-:where(#ltvyvqwkzb) .gt_footnote {
+:where(#dvnbacwwny) .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-left: 4px;
@@ -678,7 +678,7 @@
   padding-right: 5px;
 }
 
-:where(#ltvyvqwkzb) .gt_sourcenotes {
+:where(#dvnbacwwny) .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -692,7 +692,7 @@
   border-right-color: #D3D3D3;
 }
 
-:where(#ltvyvqwkzb) .gt_sourcenote {
+:where(#dvnbacwwny) .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -700,36 +700,36 @@
   padding-right: 5px;
 }
 
-:where(#ltvyvqwkzb) .gt_left {
+:where(#dvnbacwwny) .gt_left {
   text-align: left;
 }
 
-:where(#ltvyvqwkzb) .gt_center {
+:where(#dvnbacwwny) .gt_center {
   text-align: center;
 }
 
-:where(#ltvyvqwkzb) .gt_right {
+:where(#dvnbacwwny) .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-:where(#ltvyvqwkzb) .gt_font_normal {
+:where(#dvnbacwwny) .gt_font_normal {
   font-weight: normal;
 }
 
-:where(#ltvyvqwkzb) .gt_font_bold {
+:where(#dvnbacwwny) .gt_font_bold {
   font-weight: bold;
 }
 
-:where(#ltvyvqwkzb) .gt_font_italic {
+:where(#dvnbacwwny) .gt_font_italic {
   font-style: italic;
 }
 
-:where(#ltvyvqwkzb) .gt_super {
+:where(#dvnbacwwny) .gt_super {
   font-size: 65%;
 }
 
-:where(#ltvyvqwkzb) .gt_two_val_uncert {
+:where(#dvnbacwwny) .gt_two_val_uncert {
   display: inline-block;
   line-height: 1em;
   text-align: right;
@@ -738,31 +738,31 @@
   margin-left: 0.1em;
 }
 
-:where(#ltvyvqwkzb) .gt_footnote_marks {
+:where(#dvnbacwwny) .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 75%;
   vertical-align: 0.4em;
 }
 
-:where(#ltvyvqwkzb) .gt_asterisk {
+:where(#dvnbacwwny) .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-:where(#ltvyvqwkzb) .gt_slash_mark {
+:where(#dvnbacwwny) .gt_slash_mark {
   font-size: 0.7em;
   line-height: 0.7em;
   vertical-align: 0.15em;
 }
 
-:where(#ltvyvqwkzb) .gt_fraction_numerator {
+:where(#dvnbacwwny) .gt_fraction_numerator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: 0.45em;
 }
 
-:where(#ltvyvqwkzb) .gt_fraction_denominator {
+:where(#dvnbacwwny) .gt_fraction_denominator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: -0.05em;
@@ -1014,7 +1014,7 @@
 </ul>
 </div><div class="column" style="width:50%;">
 <p>Anything Else?</p>
-<p><img data-src="img/question.JPG"></p>
+<p><img data-src="img/question.jpg"></p>
 </div>
 </div>
 <aside class="notes">
